# braindigit

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  PATH.md  README.md  tests.sh
docs/: 01-build.md  02-add-to-path.md  add-to-path.md
examples/: helloWorld.b
h/: ActionTree.h  BrainfuckCommand.h  CPPTranspiler.h  CTranspiler.h  Common.h  Flags.h  Functions.h  Interpreter.h  Lexer.h  PythonTranspiler.h  RubyTranspiler.h  System.h  TextColour.h
src/: ActionTree.cpp  CPPTranspiler.cpp  CTranspiler.cpp  Flags.cpp  Functions.cpp  Interpreter.cpp  Lexer.cpp  PythonTranspiler.cpp  RubyTranspiler.cpp  System.cpp  main.cpp
visualstudio/: Braindigit.sln  Braindigit.vcxproj  Braindigit.vcxproj.filters  helloWorld.b
visualstudio/Debug/: Braindigit.ilk  compile.bat  hello.b  hello.cpp  hwt.b  hwt.py  hwt.rb
visualstudio/Debug/Braindigit.tlog/: Braindigit.lastbuildstate  Braindigit.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs/: braindigit.sln  braindigit.vcxproj  braindigit.vcxproj.filters
